error_log.txt
    Checking mapmap-mcp v0.2.0 (C:\Users\Vinyl\Desktop\VJMapper\VjMapper\crates\mapmap-mcp)
    Checking mapmap-ui v0.2.0 (C:\Users\Vinyl\Desktop\VJMapper\VjMapper\crates\mapmap-ui)
error[E0308]: mismatched types
   --> crates\mapmap-ui\src\media_browser.rs:493:50
    |
493 |                     if let Some(img) = mgr.image(entry.file_type.icon(), 16.0) {
    |                                            ----- ^^^^^^^^^^^^^^^^^^^^^^ expected `AppIcon`, found `&str`
    |                                            |
    |                                            arguments to this method are incorrect
    |
note: method defined here
   --> crates\mapmap-ui\src\icons.rs:152:12
    |
152 |     pub fn image(&self, icon: AppIcon, size: f32) -> Option<egui::Image<'_>> {
    |            ^^^^^        -------------

For more information about this error, try `rustc --explain E0308`.
error: could not compile `mapmap-ui` (lib) due to 1 previous error
